--- a/src/assets/sass/layout/_menu.scss
+++ b/src/assets/sass/layout/_menu.scss
@@ -50,7 +50,7 @@
   }
 
   h2 {
-    border-bottom: solid 2px _palette(border);
+    border-bottom: solid 2px #ffffff;
     padding-bottom: 1em;
     color: #ffffff;
   }
